2008-01-16  Aidan Kehoe  <kehoea@parhasard.net>

	* automated/hash-table-tests.el: 
	Assert that two short lists with the same contents in distinct
	orders hash differently. 

2008-01-15  Aidan Kehoe  <kehoea@parhasard.net>

	* automated/lisp-tests.el (literal-with-uninterned):
	Use ?\x syntax for Latin-1 characters, don't assume that the file
	will be read as UTF-8. 

2008-01-15  Aidan Kehoe  <kehoea@parhasard.net>

	* automated/lisp-tests.el (thing): 
	Check that printing a hash table literal doesn't clear
	print-gensym-alist. 

2008-01-03  Stephen J. Turnbull  <stephen@xemacs.org>

	* automated/symbol-tests.el (Symbol documentation): Add tests to
	check documentation extraction.

2007-12-29  Stephen J. Turnbull  <stephen@xemacs.org>

	* automated/test-harness.el (test-harness-test-compiled):
	Improve docstring.

	* automated/weak-tests.el (test-harness-test-compiled):
	Remove debugging code.

2007-12-21  Stephen J. Turnbull  <stephen@xemacs.org>

	* reproduce-crashes.el: Renamed from reproduce-bugs.el.  Update to-do.

2007-12-21  Stephen J. Turnbull  <stephen@xemacs.org>

	* reproduce-bugs.el:  Reorganize.  Minor cosmetic improvements.
	Update to-do list.
	(defbug):  Include status and docstring in value.
	(bug-hashtable):  Document the table format.
	(reproduce-bug):  Handle revised table format.  Remove broken
	autoload cookie.
	(describe-bug):  New function.  Pop up description of one bug.
	(list-bugs):  New function.  Pop up brief descriptions of all bugs.
	(1,2,3,4,5,6,7,8,9,10,11):  (Re)number all bugs.  Move comments to
	docstrings.

2007-12-11  Aidan Kehoe  <kehoea@parhasard.net>

	* automated/syntax-tests.el:
	Check that substitute-in-file-name doesn't error when handed
	non-existing environment variables, passing through the specified
	string instead. Also check that existing environment variables are
	correctly substituted. Also check that double slashes in the
	middle of a path name are treated as re-starting the path. 
